# webicon-scraper

./: README.md  pyproject.toml  scrapy.cfg
assets/: domains.csv
tests/: test_pipeline.py
webicon_scraper/: main.py  pipeline.py  preprocess.py  spider.py
